# quickcheck-tuts

./: flake.nix  quickcheck.cabal  readme.md
src/: Encoder.hs  Sentence.hs  Stuff.hs
test/: Basic.hs  Decode.hs  FunTest.hs  Main.hs
