cabal-version:      3.0
name:               griffs
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Encoder
        Stuff
        Sentence
    build-depends:
        base
        , bytestring
        , containers
        , QuickCheck
        , quickcheck-instances
        , regex-posix
        , tasty
        , tasty-quickcheck
    hs-source-dirs:   src
    default-language: Haskell2010

executable exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base
        , griffs
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    import:           warnings
    default-language: Haskell2010
    other-modules:
        Basic
        FunTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base
        , bytestring
        , griffs
        , QuickCheck
        , quickcheck-arbitrary-adt
        , quickcheck-instances
        , test-invariant
        , random
        , tasty
        , tasty-quickcheck
